# Humanism

./: .gitignore  AI_analysis.ipynb  MSHumanism_CleanQuantData_250625_AC.xlsx  analysis.html  analysis.ipynb  analysis.py  cleaned_data.xlsx  models.html  models.ipynb  pyproject.toml
