[project]
name = "Humanism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "pip>=25.2",
    "seaborn",
    "pandas",
    "numpy",
    "ipykernel>=6.30.1",
    "openpyxl>=3.1.5",
    "ipywidgets>=8.1.7",
    "tabulate>=0.9.0",
    "unidecode>=1.4.0",
    "scipy>=1.15.3",
]
